[metadata]
name = settler-py
version = 0.0.1
author = Shaolang Ai
description = FX value date calculation
url = https://github.com/shaolang/settler-py
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache Software License 2.0
  Operating System :: OS Independent

[options]
package_dir =
  =src
packages = find:
python_requires = >= 3.6
include_package_data = True

[options.packages.find]
where = src
